--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = open_weather_example_flutter
+PRODUCT_NAME = rockweatherapp
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.codewithandrea.openWeatherExampleFlutter
+PRODUCT_BUNDLE_IDENTIFIER = com.rockweatherapp.openWeatherExampleFlutter
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2022 com.codewithandrea. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2022 com.rockweatherapp. All rights reserved.
