--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cached_network_image: ^3.3.0
+  connectivity_plus: ^6.0.3
   cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
