--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   intl: ^0.18.1
   json_annotation: ^4.8.1
   shared_preferences: ^2.2.3
+  url_launcher: ^6.0.17
 
 dev_dependencies:
   build_runner: ^2.4.6
